// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c12 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c18 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c25 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c53 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c64 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c65 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c16 {
  padding-right: 8px;
}

.c22 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c48 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c51 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c54 {
  background: #ffffff;
  padding: 16px;
}

.c73 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c55 {
  border-radius: 4px;
}

.c57 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c59 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c61 {
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c66 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c68 {
  color: #666687;
  width: 0.6875rem;
}

.c71 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c67 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c56 {
  border: 1px solid #f6f6f9;
}

.c56:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c56:hover:not([aria-disabled='true']) .c11 {
  color: #4945ff;
}

.c56:hover:not([aria-disabled='true']) > .c8 {
  background: #f0f0ff;
}

.c56:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c70 {
  border: 1px solid #ffffff;
}

.c70:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c70:hover:not([aria-disabled='true']) .c11 {
  color: #4945ff;
}

.c70:hover:not([aria-disabled='true']) > .c8 {
  background: #f0f0ff;
}

.c70:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c62 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c62[aria-disabled='true'] {
  pointer-events: none;
}

.c62[aria-disabled='true'] svg path {
  fill: #666687;
}

.c62 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c62 svg path {
  fill: #4945ff;
}

.c62:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c62:focus-visible {
  outline: none;
}

.c62:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c24 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c24 > * + * {
  margin-top: 16px;
}

.c52 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c52 > * + * {
  margin-top: 8px;
}

.c13 > * {
  margin-left: 0;
  margin-right: 0;
}

.c13 > * + * {
  margin-left: 8px;
}

.c60 > * {
  margin-left: 0;
  margin-right: 0;
}

.c60 > * + * {
  margin-left: 12px;
}

.c69 path {
  fill: #666687;
}

.c63 {
  text-align: left;
}

.c63 > span {
  max-width: 100%;
}

.c63 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c63 svg path {
  fill: #8e8ea9;
}

.c58 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c58:hover svg path {
  fill: #4945ff;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c74 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c17 {
  height: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c11 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c11 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c11 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c26 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c49 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c27 {
  grid-column: span 6;
  max-width: 100%;
}

.c50 {
  grid-column: span 7;
  max-width: 100%;
}

.c72 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c5 {
  padding-right: 8px;
}

.c19 {
  padding-right: 56px;
  padding-left: 56px;
}

.c42 {
  padding-right: 16px;
  padding-left: 16px;
}

.c44 {
  padding-left: 12px;
}

.c7 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c29 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c31 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c43 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c47 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c20 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c30 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c21 > * + * {
  margin-top: 24px;
}

.c28 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c28 > * + * {
  margin-top: 4px;
}

.c32 {
  line-height: 0;
}

.c35 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c35::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c35[aria-disabled='true'] {
  color: inherit;
}

.c35:focus {
  outline: none;
  box-shadow: none;
}

.c34 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c34:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c40 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c40:focus {
  outline: none;
}

.c40[aria-disabled='true'] {
  cursor: not-allowed;
}

.c39 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c39:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c45 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c45 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c45 svg path {
  fill: #666687;
}

.c46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c46 svg {
  width: 0.375rem;
}

.c41 {
  width: 100%;
}

.c37 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c37:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c38 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c38::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c38:focus-within {
  outline: none;
}

.c36 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c36 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c36 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c36 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c36 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

@media (max-width:68.75rem) {
  .c27 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c27 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c50 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c50 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c72 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c72 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c8 c9"
          >
            <div
              class="c1 c8 c10"
            >
              <h1
                class="c11 c12"
              >
                Create API Token
              </h1>
            </div>
            <div
              class="c1 c8 c10 c13"
            >
              <button
                aria-disabled="false"
                class="c14 c15"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c16 c17"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c11 c18"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c19"
      >
        <div
          class="c20 c21"
        >
          <div
            class="c1 c22"
          >
            <div
              class="c1 c8 c23 c24"
            >
              <h2
                class="c11 c25"
              >
                Details
              </h2>
              <div
                class="c1 c26"
              >
                <div
                  class="c27"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c20 c28"
                        >
                          <label
                            class="c29"
                            for="1"
                          >
                            <div
                              class="c30"
                            >
                              Name
                              <span
                                class="c31 c32"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c33 c34"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c35"
                              id="1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c27"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c36"
                    >
                      <div>
                        <div
                          class="c20 c28"
                        >
                          <div
                            class="c30"
                          >
                            <label
                              class="c29"
                              for="3"
                            >
                              <div
                                class="c30"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c37"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c38"
                              id="3"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c27"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c20 c28"
                      >
                        <label
                          class="c29"
                          for="5"
                        >
                          <div
                            class="c30"
                          >
                            Token duration
                            <span
                              class="c31 c32"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c30 c39"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="5 5-label 5-content"
                            class="c40"
                            id="5"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c33 c41"
                          >
                            <div
                              class="c30"
                            >
                              <div
                                class="c42"
                              >
                                <span
                                  class="c43"
                                  id="5-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c30"
                            >
                              <button
                                aria-hidden="true"
                                class="c44 c45 c46"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c47"
                    />
                  </div>
                </div>
                <div
                  class="c27"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c20 c28"
                      >
                        <label
                          class="c29"
                          for="7"
                        >
                          <div
                            class="c30"
                          >
                            Token type
                            <span
                              class="c31 c32"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c30 c39"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="7 7-label 7-content"
                            class="c40"
                            id="7"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c33 c41"
                          >
                            <div
                              class="c30"
                            >
                              <div
                                class="c42"
                              >
                                <span
                                  class="c43"
                                  id="7-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c30"
                            >
                              <button
                                aria-hidden="true"
                                class="c44 c45 c46"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c48 c49"
          >
            <div
              class="c50"
            >
              <div
                class="c1 c51"
              >
                <div
                  class="c1 c8 c23 c52"
                >
                  <h2
                    class="c11 c25"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c11 c53"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c54"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c55 c56"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c8 c57 c9 c58"
                    >
                      <div
                        class="c1 c8 c59 c10 c60"
                      >
                        <button
                          aria-controls="accordion-content-0"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-0"
                          class="c1 c8 c61 c10 c62 c63"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c11 c64"
                          >
                            <span
                              class="c11 c65"
                              id="accordion-label-0"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c8 c10 c60"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c8 c66 c67"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c1 c68 c69"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c55 c70"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c8 c71 c9 c58"
                    >
                      <div
                        class="c1 c8 c59 c10 c60"
                      >
                        <button
                          aria-controls="accordion-content-1"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-1"
                          class="c1 c8 c61 c10 c62 c63"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c11 c64"
                          >
                            <span
                              class="c11 c65"
                              id="accordion-label-1"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c8 c10 c60"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c8 c66 c67"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c1 c68 c69"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c72"
            >
              <div
                class="c1 c73"
                style="min-height: 100%;"
              >
                <div
                  class="c1 c8 c23 c52"
                >
                  <h3
                    class="c11 c25"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c11 c53"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c74"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | API TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c14 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c33 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c35 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c38 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c78 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #4945ff;
}

.c79 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #4a4a6a;
}

.c22 {
  padding-right: 8px;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c28 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c29 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c36 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c63 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c66 {
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c68 {
  background: #ffffff;
  padding: 16px;
}

.c87 {
  background: #eaeaef;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
}

.c69 {
  border-radius: 4px;
}

.c71 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c73 {
  max-width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c75 {
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c80 {
  background: #dcdce4;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
}

.c82 {
  color: #666687;
  width: 0.6875rem;
}

.c85 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c31 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c81 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c70 {
  border: 1px solid #f6f6f9;
}

.c70:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c70:hover:not([aria-disabled='true']) .c13 {
  color: #4945ff;
}

.c70:hover:not([aria-disabled='true']) > .c10 {
  background: #f0f0ff;
}

.c70:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c84 {
  border: 1px solid #ffffff;
}

.c84:hover:not([aria-disabled='true']) {
  border: 1px solid #4945ff;
}

.c84:hover:not([aria-disabled='true']) .c13 {
  color: #4945ff;
}

.c84:hover:not([aria-disabled='true']) > .c10 {
  background: #f0f0ff;
}

.c84:hover:not([aria-disabled='true']) [data-strapi-dropdown='true'] {
  background: #d9d8ff;
}

.c76 {
  background: transparent;
  border: none;
  position: relative;
  outline: none;
}

.c76[aria-disabled='true'] {
  pointer-events: none;
}

.c76[aria-disabled='true'] svg path {
  fill: #666687;
}

.c76 svg {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.625rem;
}

.c76 svg path {
  fill: #4945ff;
}

.c76:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c76:focus-visible {
  outline: none;
}

.c76:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c32 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c32 > * + * {
  margin-top: 4px;
}

.c37 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c37 > * + * {
  margin-top: 16px;
}

.c67 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c67 > * + * {
  margin-top: 8px;
}

.c15 > * {
  margin-left: 0;
  margin-right: 0;
}

.c15 > * + * {
  margin-left: 8px;
}

.c74 > * {
  margin-left: 0;
  margin-right: 0;
}

.c74 > * + * {
  margin-left: 12px;
}

.c83 path {
  fill: #666687;
}

.c77 {
  text-align: left;
}

.c77 > span {
  max-width: 100%;
}

.c77 svg {
  width: 0.875rem;
  height: 0.875rem;
}

.c77 svg path {
  fill: #8e8ea9;
}

.c72 {
  min-height: 5.5rem;
  border-radius: 4px;
}

.c72:hover svg path {
  fill: #4945ff;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c20 svg {
  height: 12px;
  width: 12px;
}

.c20 svg > g,
.c20 svg path {
  fill: #ffffff;
}

.c20[aria-disabled='true'] {
  pointer-events: none;
}

.c20:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c20:focus-visible {
  outline: none;
}

.c20:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c88 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c23 {
  height: 100%;
}

.c89 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c89 .c13 {
  color: #ffffff;
}

.c89[aria-disabled='true'] .c13 {
  color: #666687;
}

.c89[aria-disabled='true']:active .c13 {
  color: #666687;
}

.c21 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c21 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 .c13 {
  color: #ffffff;
}

.c21[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c21[aria-disabled='true'] .c13 {
  color: #666687;
}

.c21[aria-disabled='true'] svg > g,.c21[aria-disabled='true'] svg path {
  fill: #666687;
}

.c21[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c21[aria-disabled='true']:active .c13 {
  color: #666687;
}

.c21[aria-disabled='true']:active svg > g,.c21[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c21:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c21:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c21 svg > g,
.c21 svg path {
  fill: #ffffff;
}

.c39 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c64 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c40 {
  grid-column: span 6;
  max-width: 100%;
}

.c65 {
  grid-column: span 7;
  max-width: 100%;
}

.c86 {
  grid-column: span 5;
  max-width: 100%;
}

.c0:focus-visible {
  outline: none;
}

.c30 {
  margin-right: 24px;
}

.c30 svg {
  width: 2rem;
  height: 2rem;
}

.c34 {
  word-break: break-all;
}

.c6 {
  padding-right: 8px;
}

.c25 {
  padding-right: 56px;
  padding-left: 56px;
}

.c54 {
  padding-right: 16px;
  padding-left: 16px;
}

.c56 {
  padding-left: 12px;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c19 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c43 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c55 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c59 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c61 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c26 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c42 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c45 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c16 svg {
  height: 12px;
  width: 12px;
}

.c16 svg > g,
.c16 svg path {
  fill: #ffffff;
}

.c16[aria-disabled='true'] {
  pointer-events: none;
}

.c16:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c16:focus-visible {
  outline: none;
}

.c16:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c18 {
  height: 100%;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c17 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 .c8 {
  color: #ffffff;
}

.c17[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c17[aria-disabled='true'] .c8 {
  color: #666687;
}

.c17[aria-disabled='true'] svg > g,.c17[aria-disabled='true'] svg path {
  fill: #666687;
}

.c17[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c17[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c17[aria-disabled='true']:active svg > g,.c17[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c17:hover {
  background-color: #f6f6f9;
}

.c17:active {
  background-color: #eaeaef;
}

.c17 .c8 {
  color: #32324d;
}

.c17 svg > g,
.c17 svg path {
  fill: #32324d;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 24px;
}

.c41 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c41 > * + * {
  margin-top: 4px;
}

.c44 {
  line-height: 0;
}

.c47 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c47::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c47::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c47:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c47::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c47[aria-disabled='true'] {
  color: inherit;
}

.c47:focus {
  outline: none;
  box-shadow: none;
}

.c46 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c46:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c52 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c52:focus {
  outline: none;
}

.c52[aria-disabled='true'] {
  cursor: not-allowed;
}

.c51 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c51:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c60 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c60:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c57 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c57 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c57 svg path {
  fill: #666687;
}

.c58 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c58 svg {
  width: 0.375rem;
}

.c62 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c62 svg {
  width: 0.375rem;
}

.c53 {
  width: 100%;
}

.c49 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c49:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c50 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c50::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c50::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c50:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c50::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c50:focus-within {
  outline: none;
}

.c48 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c48 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c48 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c48 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c48 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

@media (max-width:68.75rem) {
  .c40 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c40 {
    grid-column: span 12;
  }
}

@media (max-width:68.75rem) {
  .c65 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c65 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c86 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c86 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/api-tokens"
            >
              <span
                aria-hidden="true"
                class="c5 c6 c7"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c8 c9"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c10 c11"
          >
            <div
              class="c1 c10 c12"
            >
              <h1
                class="c13 c14"
              >
                My super token
              </h1>
            </div>
            <div
              class="c1 c10 c12 c15"
            >
              <button
                aria-disabled="false"
                class="c16 c17"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c5 c6 c18"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c8 c19"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c20 c21"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c22 c23"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c13 c24"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5 c25"
      >
        <div
          class="c5 c26 c27"
        >
          <div
            class="c1 c10 c28 c12"
          >
            <div
              class="c1 c10 c29 c12 c30"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c1 c10 c31 c32"
            >
              <div
                class="c1 c10 c12"
              >
                <span
                  class="c13 c33 c34"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c13 c35"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c1 c36"
          >
            <div
              class="c1 c10 c31 c37"
            >
              <h2
                class="c13 c38"
              >
                Details
              </h2>
              <div
                class="c1 c39"
              >
                <div
                  class="c40"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div>
                        <div
                          class="c5 c26 c41"
                        >
                          <label
                            class="c8 c19"
                            for="9"
                          >
                            <div
                              class="c5 c42"
                            >
                              Name
                              <span
                                class="c8 c43 c44"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c5 c45 c46"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c47"
                              id="9"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c40"
                >
                  <div
                    class="c1 "
                  >
                    <div
                      class="c48"
                    >
                      <div>
                        <div
                          class="c5 c26 c41"
                        >
                          <div
                            class="c5 c42"
                          >
                            <label
                              class="c8 c19"
                              for="11"
                            >
                              <div
                                class="c5 c42"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c49"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c50"
                              id="11"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c40"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c5 c26 c41"
                      >
                        <label
                          class="c8 c19"
                          for="13"
                        >
                          <div
                            class="c5 c42"
                          >
                            Token duration
                            <span
                              class="c8 c43 c44"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c5 c42 c51"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="13 13-label 13-content"
                            class="c52"
                            id="13"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c5 c45 c53"
                          >
                            <div
                              class="c5 c42"
                            >
                              <div
                                class="c5 c54"
                              >
                                <span
                                  class="c8 c55"
                                  id="13-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c5 c42"
                            >
                              <button
                                aria-hidden="true"
                                class="c5 c56 c57 c58"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c8 c59"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
                <div
                  class="c40"
                >
                  <div
                    class="c1 "
                  >
                    <div>
                      <div
                        class="c5 c26 c41"
                      >
                        <label
                          class="c8 c19"
                          for="15"
                        >
                          <div
                            class="c5 c42"
                          >
                            Token type
                            <span
                              class="c8 c43 c44"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c5 c42 c60"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="15 15-label 15-content"
                            class="c52"
                            id="15"
                            name="type"
                            type="button"
                          />
                          <div
                            class="c5 c45 c53"
                          >
                            <div
                              class="c5 c42"
                            >
                              <div
                                class="c5 c54"
                              >
                                <span
                                  class="c8 c61"
                                  id="15-content"
                                >
                                  Read-only
                                </span>
                              </div>
                            </div>
                            <div
                              class="c5 c42"
                            >
                              <button
                                aria-hidden="true"
                                class="c5 c56 c57 c62"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c1 c63 c64"
          >
            <div
              class="c65"
            >
              <div
                class="c1 c66"
              >
                <div
                  class="c1 c10 c31 c67"
                >
                  <h2
                    class="c13 c38"
                  >
                    Permissions
                  </h2>
                  <p
                    class="c13 c35"
                  >
                    Only actions bound by a route are listed below.
                  </p>
                </div>
                <div
                  class="c1 c68"
                >
                  <div
                    aria-disabled="false"
                    class="c1 c69 c70"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c10 c71 c11 c72"
                    >
                      <div
                        class="c1 c10 c73 c12 c74"
                      >
                        <button
                          aria-controls="accordion-content-3"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-3"
                          class="c1 c10 c75 c12 c76 c77"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c13 c78"
                          >
                            <span
                              class="c13 c79"
                              id="accordion-label-3"
                            >
                              Address
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c10 c12 c74"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c10 c80 c81"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c1 c82 c83"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-disabled="false"
                    class="c1 c69 c84"
                    data-strapi-expanded="false"
                  >
                    <div
                      class="c1 c10 c85 c11 c72"
                    >
                      <div
                        class="c1 c10 c73 c12 c74"
                      >
                        <button
                          aria-controls="accordion-content-4"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-labelledby="accordion-label-4"
                          class="c1 c10 c75 c12 c76 c77"
                          data-strapi-accordion-toggle="true"
                          type="button"
                        >
                          <span
                            class="c13 c78"
                          >
                            <span
                              class="c13 c79"
                              id="accordion-label-4"
                            >
                              Category
                            </span>
                          </span>
                        </button>
                        <div
                          class="c1 c10 c12 c74"
                        >
                          <span
                            aria-hidden="true"
                            class="c1 c10 c80 c81"
                            data-strapi-dropdown="true"
                          >
                            <svg
                              class="c1 c82 c83"
                              fill="none"
                              height="1em"
                              viewBox="0 0 14 8"
                              width="1em"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c86"
            >
              <div
                class="c1 c87"
                style="min-height: 100%;"
              >
                <div
                  class="c1 c10 c31 c67"
                >
                  <h3
                    class="c13 c38"
                  >
                    Advanced settings
                  </h3>
                  <p
                    class="c13 c35"
                  >
                    Select the application's actions or the plugin's actions and click on the cog icon to display the bound route
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c88"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
